--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,10 @@
 body {
 	margin: 0;
 	font-weight: 400;
-	font-size: 11px;
+	font-size: 14px;
 	line-height: 1.6;
 	font-family: Arial, Helvetica, sans-serif;
+	color: #101214;
 }
 
 .container {
@@ -19,12 +20,153 @@ p,
 ul {
 	margin: 0;
 	padding: 0;
-}
-
-li {
 	list-style: none;
 }
 
 a {
 	text-decoration: none;
 }
+
+.main-header {
+	display: flex;
+	align-items: center;
+	margin: 22px auto 25px;
+}
+
+.main-header-text,
+.main-left-wrapper {
+	width: 400px;
+}
+
+.main-header-title {
+	margin-bottom: 7px;
+	font-size: 19px;
+	font-weight: normal;
+	color: #2AAEE7;
+}
+
+.main-header-title span {
+	display: block;
+	font-size: 27px;
+	color: #101214;
+}
+
+.contact-link {
+	display: inline-block;
+	padding-left: 20px;
+	color: #000000;
+	background-repeat: no-repeat;
+	background-size: 15px 15px;
+	background-position: 0 50%;
+}
+
+.contact-github {
+	background-image: url('../images/github.svg');
+}
+
+.contact-mail {
+	background-image: url('../images/email.png');
+}
+
+.contact-link:hover {
+	/*border-bottom: 1px solid #2AAEE7;*/
+	text-decoration: underline 2px #2AAEE7;
+}
+
+.contact-link:active {
+	color: #2AAEE7;
+}
+
+.main-header-photo {
+	width: 140px;
+	margin-left: auto;
+}
+.main-header-photo img {
+	border-radius: 50%;
+}
+
+.main {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 25px;
+}
+
+.main-right-wrapper {
+	width: 140px;
+}
+
+h2 {
+	margin-bottom: 4px;
+	font-size: 13px;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	color: #73808D;
+	border-bottom: 1px solid #73808D;
+}
+
+h3 {
+	font-size: 17px;
+	font-weight: 700;
+}
+
+.experience {
+	margin-bottom: 20px;
+}
+
+.сompany-name,
+.main-right-wrapper h3 {
+	margin-bottom: 4px;
+	font-size: 15px;
+	color: #2AAEE7;
+}
+
+.main-data {
+	font-size: 12px;
+	color: #73808D;
+}
+
+.experience-list {
+	list-style: disc inside;
+}
+
+.summary {
+	margin-bottom: 20px;
+}
+
+.main-right-inner {
+	margin-bottom: 10px;
+}
+
+.main-footer address {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.main-footer .contact-github {
+	margin-right: auto;
+}
+
+.main-footer-logo {
+	width: 140px;
+	margin-left: auto;
+}
+
+.main-footer-logo .logo {
+	display: inline-block;
+	padding: 5px;
+}
+
+.main-footer-logo .logo {
+	border-radius: 50% 20% / 10% 40%;
+	box-shadow: 0px 0px 5px 0px #73808D;
+}
+
+.main-footer-logo .logo:hover {
+	box-shadow: 0px 0px 10px 0px #73808D;
+}
+
+.main-footer-logo .logo:active {
+	box-shadow: inset 0px 0px 5px 0px #73808D;
+}
+
