--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,174 +1,231 @@
-/*
-body {
+* {
 	margin: 0;
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 1.6;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+:root {
+	--bg-basic: #EFD7B5;
+	--bg-dark: #6C8CD5;
+	--color-black: #000000;
+	--color-dark: #06266F;
+	--color-dark-active: #008500;
+	--anime-durat: 0.4s;
+}
+
+html {
+	scroll-behavior: smooth;
+}
+
+body {
+	min-width: 1200px;
+	font-size: 16px;
+	line-height: 1.5;
 	font-family: Arial, Helvetica, sans-serif;
-	color: #101214;
+	background-color: var(--bg-basic);
 }
 
 .container {
-	width: 595px;
+	width: 1000px;
 	margin: 0 auto;
-	padding: 0 48px;
-}
-
-h1,
-h2,
-h3,
-p,
-ul {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-
-a {
-	text-decoration: none;
-}
-
-.main-header {
-	display: flex;
-	align-items: center;
-	margin: 22px auto 25px;
-}
-
-.main-header-text,
-.main-left-wrapper {
-	width: 400px;
-}
-
-.main-header-title {
-	margin-bottom: 7px;
-	font-size: 19px;
-	font-weight: normal;
-	color: #2AAEE7;
-}
-
-.main-header-title span {
-	display: block;
-	font-size: 27px;
-	color: #101214;
-}
-
-.contact-link {
-	display: inline-block;
-	padding-left: 20px;
-	color: #000000;
-	background-repeat: no-repeat;
-	background-size: 15px 15px;
-	background-position: 0 50%;
-}
-
-.contact-github {
-	background-image: url('../images/github.svg');
-}
-
-.contact-mail {
-	background-image: url('../images/email.png');
-}
-
-.contact-link:hover {
-	text-decoration: underline 2px #2AAEE7;
-}
-
-.contact-link:active {
-	color: #2AAEE7;
-}
-
-.main-header-photo {
-	width: 140px;
-	margin: 0;
-	margin-left: auto;
-}
-.main-header-photo img {
-	border-radius: 50%;
-}
-
-.main {
-	display: flex;
-	justify-content: space-between;
-	margin-bottom: 25px;
-}
-
-.main-right-wrapper {
-	width: 140px;
-}
-
-h2 {
-	margin-bottom: 4px;
-	font-size: 13px;
-	letter-spacing: 2px;
-	text-transform: uppercase;
-	color: #73808D;
-	border-bottom: 1px solid #73808D;
 }
 
 h3 {
-	font-size: 17px;
-	font-weight: 700;
-}
-
-.experience {
-	margin-bottom: 20px;
-}
-
-.сompany-name,
-.main-right-wrapper h3 {
-	margin-bottom: 4px;
-	font-size: 15px;
-	color: #2AAEE7;
-}
-
-.main-data {
-	font-size: 12px;
-	color: #73808D;
-}
-
-.experience-list {
-	list-style: disc inside;
-}
-
-.summary {
-	margin-bottom: 20px;
-}
-
-.main-right-inner {
 	margin-bottom: 10px;
 }
 
-.main-footer address {
+.main-header,
+.face {
+	background-color: var(--bg-dark);
+}
+
+.main-nav {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+	padding: 25px 100px;
+	list-style: none;
+}
+
+.nav-list {
+	margin-right: 20px;
+}
+
+.nav-link {
+	padding: 5px;
+	color: var(--color-dark);
+	text-decoration: none;
+	transition-duration: var(--anime-durat);
+}
+
+.nav-link:hover {
+	color: var(--color-dark-active);
+	box-shadow: 0 0 4px 2px var(--color-dark-active);
+}
+
+.face-wrap,
+.aboutme,
+.skills,
+.projects,
+.code,
+.education,
+.experience {
 	display: flex;
 	justify-content: space-around;
+	align-items: flex-start;
+	padding: 50px 100px;
+}
+
+.face-wrap {
 	align-items: center;
 }
 
-.main-footer .contact-github {
-	margin-right: auto;
+.face-text {
+	width: 50%;
+	color: var(--color-dark);
 }
 
-.main-footer-logo {
-	width: 140px;
+.face-title-name {
+	display: block;
+	line-height: 1.2;
+	font-size: 40px;
+	color: var(--color-black);
+	text-transform: uppercase;
+}
+
+.face-photo {
+	width: 50%;
+	padding-right: 100px;
+	text-align: right;
+}
+
+.face-contact-list {
+	display: flex;
+	justify-content: center;
+	width: 250px;
 	margin-left: auto;
+	font-size: 0;
+	list-style: none;
 }
 
-.main-footer-logo .logo {
+.face-link {
+	display: block;
+	width: 48px;
+	height: 48px;
+	margin: 0 10px;
+	text-decoration: none;
+	background-repeat: no-repeat;
+	background-position: 50%;
+	background-size: cover;
+	transition-duration: var(--anime-durat);
+}
+
+.face-github {
+	background-image: url(/images/github.svg);
+}
+
+.face-mail {
+	background-image: url(/images/email.png);
+}
+
+.face-link:hover {
+	box-shadow: 0 0 4px 2px var(--color-dark-active);
+}
+
+.main-title {
+	width: 40%;
+	color: var(--color-dark);
+}
+
+.description {
+	width: 60%;
+}
+
+.skills-description {
+	display: flex;
+	justify-content: space-between;
+}
+
+.skills-description {
+	list-style: none;
+}
+
+.projects-description {
+	display: flex;
+	justify-content: space-between;
+}
+
+.projects-inner {
+	margin-right: 20px;
+}
+
+.projects-inner:last-child {
+	margin: 0;
+}
+
+.projects-link {
 	display: inline-block;
-	padding: 5px;
+	height: 186px;
+	outline: 1px solid var(--color-dark);
+	transition-duration: 0.4s;
 }
 
-.main-footer-logo .logo {
-	border-radius: 50% 20% / 10% 40%;
-	box-shadow: 0px 0px 5px 0px #73808D;
+.projects-link:hover {
+	outline-color: var(--color-dark-active);
+	box-shadow: 0 0 4px 2px var(--color-dark-active);
 }
 
-.main-footer-logo .logo:hover {
-	box-shadow: 0px 0px 10px 0px #73808D;
+.main-footer {
+	background-color: var(--bg-dark);
 }
 
-.main-footer-logo .logo:active {
-	box-shadow: inset 0px 0px 5px 0px #73808D;
+.footer-wrap {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 60px 100px;
 }
 
-*/
+.footer-contact-list {
+	width: 230px;
+	list-style: none;
+}
+
+.footer-contact-item {
+	margin-bottom: 10px;
+}
+
+.footer-link {
+	display: block;
+	padding-left: 40px;
+	text-decoration: none;
+	color: var(--color-dark);
+	background-repeat: no-repeat;
+	background-position: 0 50%;
+	background-size: contain;
+	transition-duration: var(--anime-durat);
+}
+
+.footer-link:hover {
+	color: var(--color-dark-active);
+	box-shadow: 0 5px 4px -3px var(--color-dark-active);
+}
+
+.footer-github {
+	background-image: url(/images/github.svg);
+}
+
+.footer-mail {
+	background-image: url(/images/email.png);
+}
+
+.logo {
+	transition-duration: var(--anime-durat);
+}
+
+.logo:hover {
+	filter: invert(1);
+}
+
+
